# rust_evm_dashboard

./: .env.example  .gitignore  Cargo.toml  README.md
frontend/: .env.example  .gitignore  Cargo.toml  index.html  style.css
frontend/src/: error.rs  main.rs
frontend/src/components/: footer.rs  header.rs  list_msgs.rs  mod.rs  setting_context_provider.rs
frontend/src/hooks/: mod.rs  use_setting_context.rs  use_user_context.rs
frontend/src/routes/: accounts.rs  endpoints.rs  mod.rs
frontend/src/routes/account/: mod.rs
frontend/src/routes/accounts/: add_account.rs  list_accounts.rs  mod.rs
frontend/src/routes/endpoints/: endpoint_form.rs  endpoint_list.rs  mod.rs  no_endpoint.rs
frontend/src/routes/home/: mod.rs
frontend/src/services/: accounts.rs  endpoints.rs  mod.rs  requests.rs  setting.rs  web3.rs
frontend/src/types/: accounts.rs  endpoints.rs  form.rs  mod.rs  request.rs  setting.rs
migrations/2022-08-25-024700_accounts/: up.sql
migrations/2022-08-25-024942_endpoints/: up.sql
migrations/2022-08-27-172154_settings/: up.sql
src/: actions.rs  apierror.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs
src/ops/: accounts_ops.rs
