[package]
name = "rust_evm_dashboard"
version = "0.1.0"
author = ["p0p3yee"]
edition = "2021"

[dependencies]
actix-cors = "0.6.2"
actix-web = "4.1.0"
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
