[package]
name = "rust_evm_dashboard_frontend"
version = "0.1.0"
author = ["p0p3yee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
dotenv = "0.15.0"
yew-router = "0.16.0"
serde_json = "1.0.85"
serde = "1.0.144"
wasm-logger = "0.2.0"
web3 = { version = "0.18.0", default_features = false, features = ["wasm"] }
yew-hooks = "0.1.56"