[package]
name = "rust_evm_dashboard_frontend"
version = "0.1.0"
author = ["p0p3yee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
serde = "1.0.144"
wasm-logger = "0.2.0"
web3 = { version = "0.18.0", default_features = false, features = ["wasm", "http-tls"] }
yew-hooks = "0.1.56"
dotenv_codegen = "0.15.0"
reqwest = {version = "0.11.11", features = ["json"]}
thiserror = "1.0.32"
log = "0.4.17"
lazy_static = "1.4.0"
gloo-storage = "0.2"
parking_lot = "0.12.1"
wasm-bindgen-futures = "0.4.32"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]
